--- a/include/css/main.css
+++ b/include/css/main.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #loading {
   position: absolute;
   top: calc(50% - 48px);
@@ -8,4 +13,11 @@
   display: flex;
   justify-content: center;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.start {
+  color: #ed1996;
+}
+.start:hover {
+  color: #d44197;
 }
