Add countdown and pic taken

--- a/include/css/main.css
+++ b/include/css/main.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  color: #ed1996;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  color: #ed1996;
 }
 
 #loading {
@@ -15,9 +21,109 @@ body {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.start {
-  color: #ed1996;
+#startPhotoBooth img {
+  height: 80vh;
 }
-.start:hover {
-  color: #d44197;
+
+#startPhotoBooth span {
+  font-size: 15vh;
+  font-weight: bold;
+  display: inline-block;
+  margin-top: 0%;
+  margin-top: -5%;
 }
+
+#app,
+#step1,
+#step2,
+#step3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background: #fff;
+}
+
+#step1 {
+  text-align: center;
+  vertical-align: middle;
+}
+
+#step1 div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#step1 span {
+  font-size: 15vh;
+  font-weight: bold;
+}
+
+#step1 #arrow {
+  display: inline-block;
+  animation: updown 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.fadein {
+  animation: fadein 0.5s;
+  animation-timing-function: ease-out;
+}
+
+.fadeout {
+  animation: fadeout 0.5s;
+  animation-timing-function: ease-out;
+}
+
+.enlarge {
+  animation: enlarge 1s;
+  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes enlarge {
+  from {
+    opacity: 1;
+    font-size: 20vh;
+  }
+
+  to {
+    font-size: 80vh;
+    opacity: 0;
+  }
+}
+
+@keyframes updown {
+  from {
+    margin-top: 0%;
+  }
+
+  to {
+    margin-top: 20%;
+  }
+}
+
