--- a/include/css/main.css
+++ b/include/css/main.css
@@ -48,7 +48,6 @@ a {
 
 #step1 {
   text-align: center;
-  vertical-align: middle;
 }
 
 #step1 div {
@@ -67,6 +66,10 @@ a {
   animation: updown 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+
+#step1 #frameNumber {
+  font-size: 10vh;
 }
 
 .fadein {
