--- a/include/css/main.css
+++ b/include/css/main.css
@@ -1,12 +1,18 @@
+html {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  --color: #ed1996;
+}
+
 body {
   margin: 0;
   padding: 0;
-  color: #ed1996;
+  color: var(--color);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
-  color: #ed1996;
+  color: var(--color);
 }
 
 #loading {
@@ -42,9 +48,8 @@ a {
 }
 
 #app,
-#step1,
-#step2,
-#step3 {
+#admin,
+#main {
   position: absolute;
   top: 0;
   left: 0;
@@ -54,30 +59,163 @@ a {
   background: #fff;
 }
 
-#step1 {
+#main {
   text-align: center;
 }
 
-#step1 div {
+#main div {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
 
-#step1 span {
+#main span {
   font-size: 15vh;
   font-weight: bold;
 }
 
-#step1 #arrow {
+#main #arrow {
   display: inline-block;
   animation: updown 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
 
-#step1 #frameNumber {
+#main #frameNumber {
   font-size: 10vh;
+}
+
+#admin a {
+  text-decoration: none;
+}
+
+#admin #close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  font-size: 5vh;
+}
+
+#admin #close i {
+  display: block;
+}
+
+#admin ul#admin_menu {
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#admin ul#admin_menu li {
+  display: inline-block;
+  width: 250px;
+  height: 250px;
+  border: 1px solid var(--color);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+#admin ul#admin_menu li a {
+  display: block;
+  padding: 66px 0px;
+  line-height: 1.5em;
+  font-size: 3vh;
+  text-transform: uppercase;
+}
+
+#admin #admin_menu .fa {
+  font-size: 7vh;
+}
+
+#admin #admin_dialog {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  background: #ffffff;
+  position: absolute;
+  padding: 20px;
+  top: 10%;
+  left: 5%;
+  bottom: 5%;
+  right: 5%;
+  overflow-y: scroll;
+}
+
+#admin #admin_dialog ul {
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#admin #admin_dialog ul li {
+  display: inline-block;
+  border: 1px solid var(--color);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#admin #admin_dialog ul li a {
+  display: block;
+  width: 225px;
+  height: 225px;
+}
+
+#admin #admin_dialog ul li span {
+  font-size: 1.5em;
+}
+
+#admin #admin_dialog ul li img {
+  max-width: 80%;
+  max-height: 80%;
+}
+
+#spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+
+#spinner div {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 10000;
+  background: #ffffff;
+  border: 1px solid var(--color);
+  border-radius: 5px;
+  text-align: center;
+  line-height: 150px;
+}
+
+#spinner i {
+  vertical-align: middle;
+}
+
+#lines {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 10 10'><path d='M 10 0 L 0 10' fill='none' stroke='green' stroke-width='0.01' /><path d='M 0 0 L 10 10' fill='none' stroke='green' stroke-width='0.01' /></svg>");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%, auto;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
 }
 
 .fadein {
@@ -138,3 +276,7 @@ a {
   }
 }
 
+.fa-spin-slower {
+  -webkit-animation: fa-spin 2.5s infinite linear;
+  animation: fa-spin 2.5s infinite linear;
+}
